[package]
name = "pngcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
crc = "3.2.1"
flate2 = "1.0"
viuer = "0.6"
image = "0.24.7"
clap = { version = "4.5.4", features = ["derive"] }
